--- a/games/Street-Fighter/Six/system/対戦方式.md
+++ b/games/Street-Fighter/Six/system/対戦方式.md
@@ -42,6 +42,10 @@ https://www.redbull.com/jp-ja/street-fighter-6-ranked-system
 
 コンボと対空ができたらプラチナは簡単に越えられる。言い換えると、モダンを使えばいい。
 
+全キャラマスターでもMR1800よりは易しい。2キャラ行けたらあとは流れでいける。1、2キャラ目が大変。
+
+ハイマス、MR 1600でも上位3%に入る。
+
 ## カジュアルマッチ
 
 カジュアルマッチはあくまでも手慣らしの場なので、1先でいい。
