--- a/games/Street-Fighter/Six/theory/守りの基本.md
+++ b/games/Street-Fighter/Six/theory/守りの基本.md
@@ -1,4 +1,8 @@
-## 概要
+## 守りとは
+
+守りとは、相手の攻めを切ることだ。
+
+## どう守るか
 
 まずはガードで堅実に凌いで、確反、対空、無敵技暴れで切り返す。
 
@@ -16,6 +20,12 @@
 投げを読んだら基本はジャンプ。
 
 守りの基本は無敵技と中足ラッシュの逆択。無理やり割り込む。中足ラッシュはガードされても投げや連続ガードから攻めに行ける。
+
+## 基本の3種
+
+1. ガードして割り込み
+2. ジャンプ入れっぱ
+3. 無敵技
 
 ## 一手目の選択肢
 
