--- a/games/Street-Fighter/Six/theory/攻めの選択肢.md
+++ b/games/Street-Fighter/Six/theory/攻めの選択肢.md
@@ -8,12 +8,19 @@
 - バクステ、ジャンプで避けられる
 - 対空が間に合う
 
+スト６では投げと投げ抜け狩りで崩すのが基本。
+キャンセルラッシュでもしないと下段があまり強くない。
+
 ## 遅らせ打撃
 
 遅らせ打撃は無敵技に引っかかってもいいので、ジャンプには当たるようにしたい。シミーとは異なる。
 
 6F遅れまでなら最速中攻撃暴れには相打ち以上になる。
 基本的にはファジーが多いので7-8F遅れでも大丈夫。
+
+遅らせ投げ抜けを狙って崩す。
+遅らせ投げ抜けが3-7Fくらい遅らせるので、遅らせ打撃も同じくらい遅らせるのが基本。
+3-4Fくらいならファジーにも当たる。5Fを超えるとファジーには当たらない。
 
 ## 遅らせ投げ
 
