--- a/games/Street-Fighter/Six/practice/初心者向け.md
+++ b/games/Street-Fighter/Six/practice/初心者向け.md
@@ -1,3 +1,17 @@
+## 攻めの初歩
+
+まずはジャンプやラッシュで触って、相手を転ばせるまでの流れを練習する。
+相手を転ばせたら、さらにもう一度転ばせるまでの流れを練習する。
+ここまでできたらあとは攻めが通る限り転ばせて、ダメだったら退くだけ。
+流れの中にあるコンボやセットプレイをミスしないように練習する。
+
+## 守りの初歩
+
+ガードして切り返しは守りの基本だけど、実際は難しい。状況に合わせて対応しないといけない。
+初心者向けにはまず画面を見てなくてもわりとなんとかなる無敵技とジャンプ入れっぱで守ることから教えるといいかも。
+
+## その他
+
 初心者はまず画面を見る。特に相手キャラ。自キャラや手元を見ずに思った通りの操作ができるようにする。
 
 初心者はまずガードの練習から。
