--- a/games/Street-Fighter/Six/theory/キャラの強さ.md
+++ b/games/Street-Fighter/Six/theory/キャラの強さ.md
@@ -1,5 +1,3 @@
-# 攻めの強さ
-
 ## 攻めが強いキャラの特徴
 
 - 火力が高い（少ない攻めで倒し切れる）
@@ -14,9 +12,18 @@
 - 攻めが切れやすい
 - 相手のガードを崩せない
 
+## 守りが強いキャラの特徴
+
+- 無敵技を持っている
+- 左右の位置を入れ替えやすい
+- 相手を押し返しやすい（JPのODトルバランなど）
+
 ## その他
 
 攻めの強さには、ワンコンボの火力と攻めの切れにくさと崩しやすさがある。
 火力が高いキャラは攻めが切れたり崩しが弱かったりしてもワンコンボで一気に持っていく感じ。火力が高いだけだと難しい。
 攻めが切れにくいキャラは火力が控えめになっていることが多い。何度も攻撃を当てて、ダメージを積み重ねていく。割り込まれにくい。
 崩しが強いキャラはコマ投げを持っていたり、補正切りしてくる場合もある。
+
+無敵技がないのは結構きつい。
+特にSA2まで無敵がないダルシム、SA1の無敵が弱いマリーザやディージェイなど。
