--- a/games/Street-Fighter/Six/theory/守りの基本.md
+++ b/games/Street-Fighter/Six/theory/守りの基本.md
@@ -2,6 +2,14 @@
 
 守りとは、相手の攻めを切ることだ。
 
+## 守りの読み合い
+
+守る側は基本的に無敵技とジャンプ入れっぱの二択でほとんど守れる。ただ、リスクやゲージの問題がある。
+相手が打撃で攻めてくるならわざわざ無敵技でなくてもガードして切り返せばいいだけ。
+
+守る側は攻めのターンを取られた時点で不利なので、ガード、ジャンプ、無敵技、のどれでもいい。
+ただ、上位帯ではまず投げとシミーのどちらかが多いので、ジャンプで逃げるところから始めるのはあり。打撃が増えたら、次からはガードで凌ぎやすくなる。
+
 ## どう守るか
 
 まずはガードで堅実に凌いで、確反、対空、無敵技暴れで切り返す。
@@ -116,3 +124,5 @@ SA3があるなら、BOしても相手も簡単には攻められない。
 前に歩く時もリスクを考えずに進んでいる。
 
 受けは再戦に強い。
+
+打撃しか狙ってこないならガードして割り込みだけでもいい。
