--- a/games/Street-Fighter/Six/theory/守りの選択肢.md
+++ b/games/Street-Fighter/Six/theory/守りの選択肢.md
@@ -5,34 +5,56 @@
 
 守りの時はひたすらガードしてインパクトだけ見てもいいかも。
 
-## ガード
-
-- 全ての打撃をガードする
-- 投げられる
-- インパクトで壁やられになる
-
-単にガードするだけでは守りにならないが、ガードすることで距離を取れれば相手の攻撃が中攻撃、強攻撃になって割り込みやすくなる。
-
-完全なガードの欠点として、ファジー小パンのような割り込みを狙ってないせめので、相手は発生の遅い、強力な技を狙える。
-
-## バックジャンプ
-
-シミーと投げの二択には単にバックジャンプすればいい。
-
-端では垂直ジャンプになってしまう。対空されることが多い。
-
-- 打撃に当たる
-- 投げを避けて離れる
-
 ## 無敵技暴れ
 
-起き上がりに最速で無敵技を出す。
+起き上がりに最速の無敵技で切り返す。
 
 - ガード以外の行動に割り込む
-- ガードに負ける（パニカン）
+- ガードされると大きな確反がある
+- インパクトやアーマーに負ける場合がある
 
 キャラによっては垂直跳びやバクステ、一部の技に当たらないこともある。
 インパクトに負ける場合もある。
+
+完全無敵技を持っていれば、どれだけ制限されても出せる手がある。
+
+スト6ではゲージがないと無敵もないので、無敵技とジャンプの二択だけではゲージが足りないことも多い。
+
+## ジャンプ入れっぱ（相手から離れる方向）
+
+相手の投げや様子見から離れられる。
+中央ではバックジャンプ、端では前ジャンプ。
+
+- 打撃に当たる
+- 投げや後退から離れる
+
+相手にリスクはないが、投げとシミーの択に強いし、小技で固められるくらいならこちらのリスクも小さい。
+
+シミーと投げの二択には単にバックジャンプすればいい。
+
+当て投げも考えると、ある程度長く入れっぱにしておいた方が効果的。良し悪しはあるけど。
+相手も小技の単発確認から当て投げは入れ込まないと厳しいので、当たっていても投げてくる。
+
+## ガードして切り返し
+
+相手の打撃をガードして、有利になったり相手が後退したりしたのを見てから切り返す。
+
+- 打撃を凌げる
+- Dゲージを削られる
+- 投げられる
+
+普通に投げられるだけなら1200くらいなので、投げられることで攻めが切れやすい中央では投げを受け入れるのも手。
+
+単にガードするだけでは守りにならないが、ガードすることで距離を取れれば相手の攻撃が中攻撃、強攻撃になって割り込みやすくなる。
+
+完全なガードの欠点として、ファジー小パンのような割り込みを狙ってないので、相手は発生の遅い、強力な技を狙える。
+
+遅らせてコパンや中足などを入れ込むのもこれの派生。
+
+実際のところ、状況を見てから切り返すのは難しいので、ファジーコパンなどで入れ込むことが多い。
+特にシミーを見てから割り込むのと小技に割り込むのが難しい。
+
+攻め側の有利フレームが少ない状況では、バクステにしっかり差し込むのが大事。
 
 ## 起き上がりジャストパリィ
 
@@ -50,7 +72,9 @@
 
 ## ファジー打撃
 
-起き上がりから1-2F遅らせて小技を出す。
+ガードして切り返しの亜種。
+起き上がりから1-2F遅らせて、切り返しをはじめから入れ込む。
+
 最速打撃をガードしつつ、遅らせ行動に割り込む。
 
 - 最速打撃をガードする（詐欺跳びを含む）
@@ -92,6 +116,12 @@
 
 基本的に、グラップするくらいなら無敵技で暴れた方がいい。
 
+無敵技と投げ抜けは投打の両受けができる代わりにリスクが高いのは似ている。
+投げ抜けには、ゲージを使わない、インパクトなどのアーマーに勝てる場合が多い、当てても有利にならない、といった特徴がある。
+
+攻め側の有利フレームが短い密着状況（後退で投げ抜けを避けられない状況）では、無敵技でなく投げ抜けで十分。投げ抜けは空振りしなければ咎めにくい。相手はバクステしないといけなくなる。
+たとえばジュリの柔道とか、近めでラッシュしてきた時とか。
+
 ## 遅らせジャストパリィ
 
 相手のよくある連携に合わせてジャストパリィを狙う。例えば、弱弱や中中、中足波動、など。
@@ -113,6 +143,11 @@
 キャンセルラッシュは全体13Fの技でも23Fあるので、最速で返せば確定する。
 3ゲージと2ゲージの交換になるので、効率的にはこちらが有利。
 ただ、バーンアウトには注意。
+
+## 垂直ジャンプ
+
+コマ投げや遅らせ通常投げに最大リターンを狙う。
+ジャンプの欠点に加え、普通に対空されるリスクはあるが、強攻撃をガードさせるだけでも切り返しになる。
 
 ## その他
 
