--- a/games/Street-Fighter/Six/theory/差し合いの基本.md
+++ b/games/Street-Fighter/Six/theory/差し合いの基本.md
@@ -151,3 +151,5 @@
 相手がラッシュにパリィを一瞬押してくるなら、あえて中下段を遅らせてパリィが切れたところに当てると、相手もちゃんとガードしないといけない。
 
 基本的に差し合いはラッシュを止める小パンか中パン、弾や突進技を受けるパリィあたりに指を置いておきたい。差し合いのインパクトは最悪技を振る時だけでいい。
+
+キャンセルラッシュは連続ガードにならなかったら無敵技が確定するので、基本的には無敵技を仕込むのが無難。連続ガードの時は出ないように気を付ける。
