--- a/games/Street-Fighter/Six/theory/攻めの基本.md
+++ b/games/Street-Fighter/Six/theory/攻めの基本.md
@@ -1,4 +1,18 @@
+## 攻めの読み合い
+
+まずは相手を崩すために投げとシミーのどちらかで攻めるのが基本。
+
+投げがカウンターになるなら攻撃技で暴れているので打撃も通るし、ジャンプやバクステで逃げる場合も同様に打撃が通る。
+打撃が通るなら打撃も通したほうがリターンは大きい。
+
+無敵技や投げ抜けのようにハイリスクハイリターンな行動の頻度はよく観察しておこう。
+
+攻めるときは相手の守りをよく見る。
+特に、無敵技や投げ抜けの頻度やガードの後にどう暴れるか。
+
 ## 基本の3種
+
+投、打、見の３つが基本。
 
 1. 投げ
 2. 打撃
@@ -163,3 +177,9 @@ https://x.com/acqua_db/status/1902286060316717314
 コンボが下手だと相手が攻めを切らなくても勝手に切れて確反食らうのでダメ。強い起き攻めができる状況なのにしないのも同じ。
 
 格ゲーで無駄に前に出るのは攻めとは言えないけど、有利になる技やキャンセルできる技をガードさせるのは攻めの始動になる。
+
+相手が投げを嫌ってジャンプするなら打撃が通る。
+
+相手側がよくわかっていなくて、切り返せるところでもガード入れっぱにしているならそのまま攻め継続したっていい。
+
+最速ジャンプと最速無敵技の二択を潰すには、後退から後ろジャンプの着地に長い技を当てる手もある。難しいけど。バクステにされると尚更難しい。
