--- a/games/Street-Fighter/Six/theory/攻めの選択肢.md
+++ b/games/Street-Fighter/Six/theory/攻めの選択肢.md
@@ -1,15 +1,45 @@
-## 最速打撃: 0
-
-すべての基本。
-無敵技以外で反撃されない。
-
-## 最速投げ: 0
-
-- バクステ、ジャンプで避けられる
-- 対空が間に合う
+## 最速投げ
 
 スト６では投げと投げ抜け狩りで崩すのが基本。
 キャンセルラッシュでもしないと下段があまり強くない。
+
+- ガードを崩す
+- ジャンプやバクステで逃げられる
+- パリィやインパクトを投げる
+- 垂直ジャンプに対空が間に合う
+
+## 最速打撃
+
+相手の起き上がり3F以内に打撃を重ねる。
+スト6では攻撃技やジャンプ、バクステなどの発生が最速4Fなので、無敵技以外で割り込めない。
+
+打撃を重ねるのは基本的にジャンプやバクステを咎めるため。
+
+- ガードに受けられる
+- Dゲージを削る
+- ジャンプやバクステに地上で当たる
+- 相手が無敵のない技を出しているとカウンターになる
+- 起き上がりパリィにジャストパリィされる
+
+中下段があるとガードされていても崩せる場合がある。
+ただ、スト6ではよく見て対処すればガードできる程度のフレームにはなっている。
+
+ラッシュして重ねるとさらに有利をとって攻め継続できる。
+
+打撃の中でも、小技は複数回触れるので相手も割り込みにくい利点があって、中・強攻撃は火力が高い利点がある。
+
+## 後退（投げ抜け狩り、シミー）
+
+投げ抜けを誘って差し返す。
+
+距離をとって投げ抜けを空振りさせる。
+
+- 無敵技をガードできる
+- 投げ抜けを空振りさせられる（距離が十分なら）
+
+ギリギリの距離を取るので、コマ投げには投げられやすい。
+
+有利フレームが少ないと、そもそも後退しても早めの投げ抜けに引っかかる場合がある。
 
 ## 遅らせ打撃
 
@@ -22,39 +52,60 @@
 遅らせ投げ抜けが3-7Fくらい遅らせるので、遅らせ打撃も同じくらい遅らせるのが基本。
 3-4Fくらいならファジーにも当たる。5Fを超えるとファジーには当たらない。
 
+- 無敵技に負ける
+- ジャンプやバクステに引っかかる
+- 遅らせ打撃を崩す
+- 遅らせ投げ抜けを崩す
+- 最速打撃よりも強度の高い技を使える場合がある
+
 ## 遅らせ投げ
 
-- インパクト暴れを投げる
-- パリィを投げる（パニカン）
+- 無敵技をガードする
+- パリィを投げる
+- インパクトを投げる
+- ジャンプやバクステで逃げられる
 
 相手のパリィやインパクトを狙う。
 
 パリィを狩るなら最速投げではない方がいい。特に詐欺跳びのすかし投げ。
 ジャストパリィを誘って最速投げはファジー小パンに負ける。遅らせ投げならパリィの硬直を投げつつファジー小パンをガードできる。
 
-## 後歩き（シミー）
+相手の投げ抜けのさらに後くらいまで遅らせる。4-5Fくらい。
 
-- 投げをパニカン
-- コマ投げには投げられやすい
-- 無敵技をガードできる
+## バクステシミー
 
-## バクステ
+投げ抜け狩りの一種。
 
-- 投げをパニカン
+- 投げ抜けを誘発させて確反
+- 無敵技には当たることが多い
 - コマ投げを避けられる
 
-## 垂直跳び（シミー）
+基本的に後退がシミーにならなくて、相手がそれを知っていて無敵技よりも投げ抜けを多用してくる場合の択。
 
-- 投げをパニカン
+## 垂直ジャンプ攻撃
+
+投げ抜け狩りの一種。
+いわゆる原人狩り。
+
+- ガードされても大きな有利が取れる
 - コマ投げを避けられる
+- 対空される
 
 ## 詐欺飛び
+
+最速打撃の一種。
 
 状況は限定的だが、無敵技に当たらずに攻撃をガードさせてさらに密着有利を作れる。
 
 端の詐欺飛びをジャストパリィされても体力に余裕があるなら、小技は食らう覚悟で後ろジャンプするのもあり。前ジャンプと後ろ投げだけは防いで端攻めを維持する。
 
-## あえて五分から小パン
+## 五分から小パン
 
 あえて五分を作って4F技を重ねると、暗転に合わせてパリィで攻撃をキャンセルできる。
 相手がSA2やSA3を持っていても積極的に攻められるので便利。
+リスクの低い攻め。様子見よりはマシくらいのもの。
+
+## 当て投げ
+
+スト6では基本的に打撃をガードされると不利になるし、有利になる技は離れたりしてあまり当て投げできない。
+ただ、ガード入れっぱで切り返してこないとか、ジャンプ入れっぱにしてないとか、初心者には通る可能性がある。
