--- a/shared/game/theory/読み.md
+++ b/shared/game/theory/読み.md
@@ -42,3 +42,7 @@
 結果を的中させるのではなくて、判断を先に済ませておいて、それ以外は諦める。
 
 一貫性は読みやすさに繋がるので、社交では信頼につながるけど、対戦ではマイナスになることがある。
+
+読みというのは、相手の行動の選択肢を絞って、判断を早めるためにある。
+
+見てから全部対処できるなら読む必要もない。
