--- a/games/Street-Fighter/Six/theory/状況判断.md
+++ b/games/Street-Fighter/Six/theory/状況判断.md
@@ -1,2 +1,6 @@
 有利状況としてはフレーム有利で先に動ける状況が代表的だけど、それだけじゃない。
 ダルシムみたいに一方的に攻撃が届くとか、ゲージが有利とか、体力が有利で相手が前に出ないといけないとか。相手に守りを強要させる、相手の行動を制限するのが有利。
+
+端は避ける。
+
+今作ではインパクトが強いので端攻めが強い。
