--- a/games/Street-Fighter/Six/theory/詰みの状況.md
+++ b/games/Street-Fighter/Six/theory/詰みの状況.md
@@ -1,4 +1,22 @@
-格ゲー界隈では次の一手で詰む状況を「リーサル」と表現することが多い。
+## 概要
+
+格ゲー界隈では次の一手で勝てる状況を「リーサル」と表現することが多い。
+
+リーサルの選択肢は始動するポイントをたくさん持っていた方がいい。
+実際に始動できる状況になる前に頭の中で選別しておけば、判断を早くできる。
+
+## 特に考えておいた方がいい始点
+
+- 4-5F技から
+- 中足から
+- Dリバの確反
+- 昇竜やSAの確反
+- 対空（通常昇竜、OD昇竜、対空に使えるSA、空対空からのコンボ、など）
+- ラッシュや発生の遅い技への割り込み（無敵技単発）
+- 壁インパクト確定状況
+- 削り確定状況
+
+## その他
 
 リーサルを意識する。
 何を当てたら勝ちか、何を当てられたら負けか。
