--- a/games/Street-Fighter/Six/theory/投げ抜けの是非.md
+++ b/games/Street-Fighter/Six/theory/投げ抜けの是非.md
@@ -1,7 +1,27 @@
 # 投げ抜けの是非
 
+## 概要
+
 投げ抜けは基本的に避ける。
 気軽に使う人が多いけど、無敵技と同じ感覚で使うべき。
 
-ただ、相手が後退できるほど有利フレームがない場合には投げ抜けが強い。
-この場面では相手もバクステや遅らせ打撃にしないと投げ抜けを狩れないので、無敵技にも引っかかるし、ガードからバクステを見て差し込むこともできる。
+投げを避けるなら、まずはジャンプかバクステから。
+
+焦って投げ抜けするくらいなら無敵技で暴れた方がいい。
+
+## 投げ抜けが強い場面
+
+相手が後退できるほど有利フレームがない場合には投げ抜けが強い。
+この場面では相手もバクステや遅らせ打撃にしないと投げ抜けを狩れないので、無敵技にも引っかかるし、ガードからバクステを見て切り返すこともできる。
+
+## その他
+
+投げ抜けしていい場面もある。ド密着で五分近くならバクステやジャンプでもガードや対空が間に合う状況が多い。
+本当に投げ抜けしてもいい場面以外は投げを受け入れるか、逆択で無敵技で暴れたほうがまだいい。
+
+攻めで遅らせ投げという選択肢もある。
+垂直以外にはわりと安定。
+相手がファジー小パンならガードしてから切り返す。
+相手の起き上がりからさらに遅らせるので、かなり遅めに押す。
+
+当て投げに対する投げ抜けは、相手の攻撃をガードした硬直が切れたところから相手の不利フレームを引いて4-9F以内に押すので、相手の技をよく見て押さないといけないのが難しい。その上で相手がそもそも不利なら投げ抜けではなくガードしてコパン暴れ（ファジーコパン）のほうがいい。あとはジャンプ入れっぱを長めに入れてもいい。
