--- a/games/Street-Fighter/Six/theory/キャラの強さ.md
+++ b/games/Street-Fighter/Six/theory/キャラの強さ.md
@@ -1,9 +1,19 @@
 ## 攻めが強いキャラの特徴
 
 - 火力が高い（少ない攻めで倒し切れる）
-- 攻めに入りやすい（相手に触りやすい）
-- 攻めが切れにくい（有利が取れたり、離れにくかったり）
-- 相手を崩しやすい（中段やコマ投げなど）
+- 攻めに入りやすい
+  - 間合いが長い
+  - 飛び道具を盾に近づける
+  - 空中から飛び込む技を持っている
+  - 設置技を持っている
+  - 起き攻めの状況がいい
+- 攻めが切れにくい
+  - 小技をたくさん刻める
+  - ガードされても有利が取れる技を持っている
+  - ガードされても離れにくい
+- 相手を崩しやすい
+  - 中段を持っている
+  - コマ投げを持っている
 
 逆に、攻めが弱いというのは、
 
@@ -14,9 +24,12 @@
 
 ## 守りが強いキャラの特徴
 
-- 無敵技を持っている
-- 左右の位置を入れ替えやすい
+- 完全無敵技を持っている
+- 対空無敵技を持っている
+- 発生の早い技が長い
+- 端を脱出しやすい
 - 相手を押し返しやすい（JPのODトルバランなど）
+- 無敵技に溜めが必要ない
 
 ## その他
 
@@ -27,3 +40,9 @@
 
 無敵技がないのは結構きつい。
 特にSA2まで無敵がないダルシム、SA1の無敵が弱いマリーザやディージェイなど。
+
+遅い弾も攻め込むために役立つ。
+
+ダルシムは攻めキャラ。一方的に相手の間合いの外から攻撃を当てられて、差し合いが常に攻めているような状態。
+
+キャミィやジェイミーは攻めと守りの両面で強みのあるキャラだったけど、キャミィの入れ替えOD昇竜はさすがにナーフされた。
