--- a/games/Street-Fighter/Six/theory/対空.md
+++ b/games/Street-Fighter/Six/theory/対空.md
@@ -21,3 +21,6 @@
 投げに垂直跳びで簡単に攻めを切られてしまう。
 
 対空されても安かったら跳んでいい。
+
+差し合いは相手に触られた有利を取られたら負けなので、ジャンプ攻撃をガードさせられた時点で負けている。
+あとパリィで受けるのも何もせずに投げがパニカンになるので読み合いになってしまう。パリィを見せるのはあくまでも無敵のない対空の布石。
