--- a/games/Street-Fighter/Six/characters/Guile/ガイルの差し合い.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの差し合い.md
@@ -8,9 +8,13 @@
 
 - 2LP
 - 2MK
+- 6MK
+- 6HK
 
 正直、サマソは溜めてもすぐ裏に抜けるので無駄。基本は2HPとMKで落とす。
 サマソを溜めるよりも距離を調整する方が重要。
+
+2MK(c), 2MP, ...のカウンター確認が重要。大きなダメージソースになる。
 
 ## 飛び道具
 
