--- a/games/Street-Fighter/Six/characters/Guile/ガイルの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの攻めの状況.md
@@ -21,6 +21,8 @@
 
 ## 弱サマー: 36
 
+中サマーよりも近くに落ちるので起き攻めしやすい。
+
 ## 中サマー: 37
 
 強サマーよりも近くに落ちるのでラッシュで攻められる。
@@ -37,8 +39,10 @@
 
 ## 強SA1, ODサマー: 33
 
+中央では大きく吹き飛ぶので、ブレイドの設置かソニックから改めて攻める。
+
 ## SA3: 16
 
-相手のジャンプ攻撃が届かない距離なので、ブレイド設置が基本的に安定。相手が前ジャンプしたら踏む。
+相手のジャンプ攻撃が届かない距離なので、強ブレイド設置が基本的に安定。相手が前ジャンプしたら踏む。
 
 ブレイド設置は、ザンギのSA2、キャミィのSA3、ベガのSA2、には咎められる。
