--- a/games/Street-Fighter/Six/characters/Guile/ガイルの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの立ち回り.md
@@ -35,10 +35,10 @@ DR 2MKやDR HKから2MPに繋ぐ。
 
 ## 対空
 
+- 弱サマー: 近・中距離、溜めあり
 - 2HP: 近距離、溜めなし
 - MK: 遠距離
-- 中サマー: 中距離、溜めあり
-- ODサマー: 中距離、溜めあり
+- ODサマー: リーサル
 - 空投げ: 端を維持する
 - J.LK: めくりへの対処
 
