--- a/games/Street-Fighter/Six/characters/Guile/ガイルの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの練習メニュー.md
@@ -9,32 +9,36 @@
 
 （ダミー設定 > ガード: ランダム）
 
-- J.LK, MP, 2MP, 強サマー, SA3
+- J.LK, MP, 2MP, 強サマー, SA3, 強ブレイド
 - J.LK, MP(g), ガード
 
-慣れるまではMP, 2MPでなくMP, 2MP-2MPにしてもいい。火力は落ちる。
+慣れるまではMP, 2MPでなくMP, 2MP-2MPにしてもいい。火力は少し落ちるけど簡単。
 
 ## {C} 確反
 
 - HP(pc), 3HK, 強サマー
 - HP(pc), 4HP, 強SA1, ODサマー
-- HP(pc), HP, CR HK, 2MP, 強サマー, SA3
+- HP(pc), HP, CR HK, 2MP, 強サマー, SA3, 強ブレイド
 
 ## {M} 確反
 
 - 6HP(pc), MP-4HP, 強サマー
-- 6HP(pc), MP-4HP, ODソニック, SA3
+- 6HP(pc), MP-4HP, ODソニック, SA3, 強ブレイド
+
+## {C} ラッシュからの崩し
+
+- 6MP/2MK, 2MP, 強サマー, SA3, 強ブレイド
 
 ## {C} インパクトからのコンボ
 
 - DI(pc), 3HK, 強サマー
 - DI(pc), HP, CR HK, 2MP, SA1, ODサマー
-- DI(pc), HP, CR HK, 2MP, 強サマー, SA3
+- DI(pc), HP, CR HK, 2MP, 強サマー, SA3, 強ブレイド
 
 ## {M} インパクトからのコンボ
 
 - DI(pc), MP-4HP, 強サマー
-- DI(pc), MP-4HP, ODソニック, SA3
+- DI(pc), MP-4HP, ODソニック, SA3, 強ブレイド
 
 ## 壁インパクトからのコンボ
 
@@ -42,7 +46,7 @@
 
 ## キャンセルラッシュからの攻め
 
-- 2MP, CR 2MP, MP, 2MP, 強サマー, SA3
+- 2MP, CR 2MP, MP, 2MP, 強サマー, SA3, 強ブレイド
 - 2MP, CR 2MP(g), 2MP-2MP(g), 強SA1, ODサマー
 - 2MP, CR 2MP(g), 2MP-2MP(g), 弱ソニック
 
