--- a/games/Street-Fighter/Six/characters/Guile/ガイルのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルのコンボ.md
@@ -32,6 +32,7 @@
 
 ## MP
 
+- MP, 2MP, 強サマー: 2320
 - MP, 2MP-2MP, 強サマー: 2320
 - {端} MP, 2MP-2MP, ODソニック, 強サマー: 2780
 - {端} MP, 2MP-2MP, 強SA1, ODサマー: 3210
@@ -103,16 +104,20 @@
 
 ## 2MK(+2)
 
-- 4MK(+4), 2MP, 強サマー: 1960
-- 4MK(+4), 2MP, 強SA1, ODサマー: 3020
+- 2MK(+2), 2MP, 強サマー: 1960
+- 2MK(+2), 2MP, CR 2MP, MP, 2MP, 強サマー: 2368
+- 2MK(+2), 2MP, 強SA1, ODサマー: 3020
+- 2MK(+2), 2MP, 強サマー, SA3: 3960
+- 2MK(+2), 2MP, CR 2MP, MP, 2MP, 強サマー, SA3: 4368
+- 2MK(+2), 2MP, CR 2MP, HP, CR HK, 2MP, 強サマー, SA3: 4683
 
 ## 2MK(+4)
 
-- 4MK(+4), MP, 2MP, 強サマー: 2240
-- {C} 4MK(+4), HP, cDR HK, 2MP, 強サマー: 2586
-- 4MK(+4), MP-4HP, 強SA1, ODサマー: 3130
-- 4MK(+4), MP, 2MP, 強サマー, SA3: 4240
-- {C} 4MK(+4), HP, cDR HK, 2MP, 強サマー, SA3: 4586
+- 2MK(+4), MP, 2MP, 強サマー: 2240
+- {C} 2MK(+4), HP, cDR HK, 2MP, 強サマー: 2586
+- 2MK(+4), MP-4HP, 強SA1, ODサマー: 3130
+- 2MK(+4), MP, 2MP, 強サマー, SA3: 4240
+- {C} 2MK(+4), HP, cDR HK, 2MP, 強サマー, SA3: 4586
 
 ## 6MK(+1)
 
@@ -176,14 +181,23 @@
 
 ## DI(pc)
 
-- {C} DI(pc), 3HK, 強サマー: 2740
 - DI(pc), MP-4HP, 強サマー: 2700
-- DI(pc), 2MP-2MP, SA1, ODサマー: 3100 (AC2)
-- DI(pc); 2HK-3HK, 強サマー, SA1: 3220 (膝崩れを待って2HK)
-- DI(pc), MP-4HP, 強SA1, ODサマー: 3590
-- DI(pc), MP-4HP, SA3: 4260
+- {C} DI(pc), 3HK, 強サマー: 2740
+- {C} DI(pc), HP, cDR HK, 2MP, 強サマー: 3046
+- DI(pc), 2MP-2MP, 強SA1, ODサマー: 3100 (AC2)
+- DI(pc); 2HK-3HK, 強サマー, SA1: 3340 (膝崩れを待って2HK)
+- {C中央} DI(pc), HP, cDR 6MK, MP, 2MP, 弱ソニック, HK, SA1: 3655
+- {C端} DI(pc), HP, cDR 6MK, MP, 2MP, 弱ソニック, HK, SA1: 3821
+- {C端} DI(pc), HP, cDR 6MK, MP, 2MP, 弱ソニック, HK, 強SA1, ODサマー: 3865
+- DI(pc), 4HP, 強SA1, ODサマー: 3640
+- DI(pc), 2MP, 強サマー, SA3: 4420
+- {C} DI(pc), 3HK, 強サマー, SA3: 4740
 - DI(pc), MP-4HP, ODソニック, SA3: 4460 (AC3)
 - {C} DI(pc), HP, cDR HK, 2MP, 強サマー, SA3: 5046
+- {中央} DI(pc), 4HP, cDR 6MK, MP, 2MP, 弱ソニック, HK, SA3: 4975
+- {C中央} DI(pc), HP, cDR 6MK, MP, 2MP, 弱ソニック, HK, SA3: 5055
+- {端} DI(pc), 4HP, cDR 6MK, MP, 2MP, 弱ソニック, 4HP, 弱ソニック, HK, SA3: 5124
+- {C端} DI(pc), HP, cDR 6MK, MP, 2MP, 弱ソニック, 4HP, 弱ソニック, HK, SA3: 5221
 
 - {C中央} DI(pc), HP, cDR 6MK, MP, 2MP, 弱ソニック, HK, SA1: 3655
 - {C中央} DI(pc), HP, cDR 6MK, MP, 2MP, 弱ソニック, HK, SA3
