--- a/games/Street-Fighter/Six/characters/Guile/ガイルの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの練習メニュー.md
@@ -1,9 +1,22 @@
 ## 飛び道具
 
-- 強ソニック, 強ソニック, ...
+（ダミー設定 > ガード: ランダム）
+
+- 強ソニック, ステップ
+- 強ソニック(g), 強ソニック, ...
 
 最速で回せるようにする。
 最遠距離で着弾した瞬間に出すくらいでちょうど溜まる。感覚を覚える。
+
+ヒットしたら前に出る。
+
+## 対空
+
+（対空練習）
+
+- 弱サマー: 溜めがある場合
+- 2HP: 溜めがない場合
+- MK: 遠距離
 
 ## ジャンプ弱攻撃からの攻め
 
@@ -12,37 +25,50 @@
 - J.LK, MP, 2MP, 強サマー, SA3, 強ブレイド
 - J.LK, MP(g), ガード
 
-慣れるまではMP, 2MPでなくMP, 2MP-2MPにしてもいい。火力は少し落ちるけど簡単。
-
 ## {C} 確反
 
-- HP(pc), 3HK, 強サマー
+（確定反撃の練習）
+
+- HP(pc), 3HK, 強サマー, SA3, 強ブレイド
 - HP(pc), 4HP, 強SA1, ODサマー
-- HP(pc), HP, CR HK, 2MP, 強サマー, SA3, 強ブレイド
-
-## {M} 確反
-
-- 6HP(pc), MP-4HP, 強サマー
-- 6HP(pc), MP-4HP, ODソニック, SA3, 強ブレイド
-
-## {C} ラッシュからの崩し
-
-- 6MP/2MK, 2MP, 強サマー, SA3, 強ブレイド
 
 ## {C} インパクトからのコンボ
 
-- DI(pc), 3HK, 強サマー
-- DI(pc), HP, CR HK, 2MP, SA1, ODサマー
-- DI(pc), HP, CR HK, 2MP, 強サマー, SA3, 強ブレイド
+（ドライブインパクトへの対応練習）
+
+- DI(pc), 3HK, 強サマー, SA3, 強ブレイド
+- DI(pc), 4HP, 強SA1, ODサマー
+
+## {M} 確反
+
+（確定反撃の練習）
+
+- 6HP(pc), MP-4HP, ODソニック, SA3, 強ブレイド
 
 ## {M} インパクトからのコンボ
+
+（ドライブインパクトへの対応練習）
 
 - DI(pc), MP-4HP, 強サマー
 - DI(pc), MP-4HP, ODソニック, SA3, 強ブレイド
 
 ## 壁インパクトからのコンボ
 
-- DI(壁), 2MP, 強サマー,
+- DI(壁), 2MP, 強サマー, SA3
+
+## {C} ラッシュからの崩し
+
+（ダミー設定 > ガード: ランダム）
+
+- DR 6MP/2MK, 2MP, 強サマー, SA3, 強ブレイド
+- DR 6MP(g), 前投げ
+- DR 2MK(g), ガード
+
+## {C} 対空からの攻め
+
+（対空練習）
+
+- 弱サマー, DR 6MP/2MK/投げ
 
 ## キャンセルラッシュからの攻め
 
@@ -52,9 +78,3 @@
 
 慣れるまではMP, 2MPでなくMP, 2MP-2MPにしてもいい。火力は落ちる。
 なんならMPを挟まなくてもいい。
-
-## 対空
-
-- 弱サマー
-- 2HP
-- MK
