--- a/games/Street-Fighter/Six/characters/Mai/舞の攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の攻めの状況.md
@@ -8,6 +8,10 @@
 
 ## 4HK-HK: 48
 
+- ステップ 2回: 投げ間合いのギリギリ外で+12
+  - 前歩き, 2LK/2MP/4HK
+  - 前歩き, 前投げ
+  - ガード: シミー
 - (中) 中扇: ジャンプに引っかかる
 - (中) 中扇, DR 2MP: その場受け身に連続ガード
 
