--- a/games/Street-Fighter/Six/characters/Guile/ガイルのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルのコンボ.md
@@ -190,7 +190,7 @@
 - {C端} DI(pc), HP, cDR 6MK, MP, 2MP, 弱ソニック, HK, SA1: 3821
 - {C端} DI(pc), HP, cDR 6MK, MP, 2MP, 弱ソニック, HK, 強SA1, ODサマー: 3865
 - DI(pc), 4HP, 強SA1, ODサマー: 3640
-- DI(pc), 2MP, 強サマー, SA3: 4420
+- DI(pc), 強サマー, SA3: 4480
 - {C} DI(pc), 3HK, 強サマー, SA3: 4740
 - DI(pc), MP-4HP, ODソニック, SA3: 4460 (AC3)
 - {C} DI(pc), HP, cDR HK, 2MP, 強サマー, SA3: 5046
