--- a/games/Street-Fighter/Six/characters/Guile/ガイルの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの練習メニュー.md
@@ -30,14 +30,14 @@
 （確定反撃の練習）
 
 - HP(pc), 3HK, 強サマー, SA3, 強ブレイド
-- HP(pc), 4HP, 強SA1, ODサマー
+- HP(pc), 4HP/HK, 強SA1, ODサマー
 
 ## {C} インパクトからのコンボ
 
 （ドライブインパクトへの対応練習）
 
 - DI(pc), 3HK, 強サマー, SA3, 強ブレイド
-- DI(pc), 4HP, 強SA1, ODサマー
+- DI(pc), 4HP/HK, 強SA1, ODサマー
 
 ## {M} 確反
 
