--- a/games/Street-Fighter/Six/characters/Jamie/ジェイミーのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Jamie/ジェイミーのコンボ.md
@@ -164,5 +164,8 @@ MK, cDR MP, 2HP, 強酔疾歩-P, SA3, OD酔疾歩, 2HK-酒: 4713
 
 - DI(pc), 2HP, 強流酔拳-KK: 2204
 - DI(pc), 2HP, 強酔疾歩: 2264
+- {C|酔2} DI(pc), 2HP, 強爆廻: 2940-3231
 - DI(pc), 2HP, 強酔疾歩, SA3, 強酔疾歩: 3892/3820
-- (端) DI(pc), 2HP, 強酔疾歩, SA3, OD酔疾歩, 2HK-酒: 4054
+- {端} DI(pc), 2HP, 強酔疾歩, SA3, OD酔疾歩, 2HK-酒: 4054
+- {C|酔2} DI(pc), 2HP, 強爆廻, SA3, 強疾歩: 4600-5056
+- (C|端|酔2) DI(pc), 2HP, 強爆廻, SA3, OD疾歩, DR 2MP, OD疾歩, DR 2MP, 強爆廻: 4952-5443
