--- a/games/Street-Fighter/Six/characters/ED/コンボ.md
+++ b/games/Street-Fighter/Six/characters/ED/コンボ.md
@@ -41,9 +41,13 @@ HPは強制立たせ効果がある。
 - HP, チェイス, 強ブリッツ: 2280
 - HP, OD紐, 弱アッパー, 強ブリッツ: 2879/2464
 - HP, OD紐, 弱アッパー, 強アッパー: 2935
-- HP, OD紐, 弱アッパー, ODアッパー: 3155
+- HP, OD紐, OD紐, 弱アッパー, 弱ブリッツ: 3360
 - HP, OD紐, 弱アッパー, SA1: 3375
+- HP, OD紐, OD紐, SA1: 3700
+- HP, ODブリッツ, 弱SA2, 強アッパー, ステップ, HP-h: 4195 (運び)
+- HP, ODブリッツ, 弱SA2, 強アッパー, 6HP, 強アッパー: 4460
 - HP, OD紐, 弱アッパー, 強ブリッツ, SA3: 4879
+- HP, OD紐, OD紐, 弱アッパー, 弱ブリッツ, SA3: 5360
 
 ## HP, cDR HK
 
@@ -125,3 +129,7 @@ HPは強制立たせ効果がある。
 - (空) 弱アッパー, 中ブリッツ: 1530
 - (空) 弱アッパー, SA1: 2300/1840
 - (空) 弱アッパー, SA3: 3700/2960
+
+## その他
+
+MエドのSA2は暗転中に左右で強弱を決める。後ろなら弱、前なら強。
