--- a/games/Street-Fighter/Six/characters/Guile/ガイルの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの攻めの状況.md
@@ -2,6 +2,10 @@
 
 ## 2HK(pc): 49
 
+## 6HK(pc): 55
+
+膝崩れになって
+
 ## 前投げ: 15
 
 - (端) 6HP
@@ -31,6 +35,10 @@
 
 - DR HK
 - DR 2MK
+
+## 2MP-2MP, 弱/中サマー: 39
+
+## 2MP-2MP, 強サマー: 42 (端では41)
 
 ## 強サマー: 39
 
