--- a/games/Street-Fighter/Six/characters/Guile/ガイルのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルのコンボ.md
@@ -34,6 +34,7 @@
 
 - MP, 2MP, 強サマー: 2320
 - MP, 2MP-2MP, 強サマー: 2320
+- MP, 2MP, ODサマー: 2480
 - {端} MP, 2MP-2MP, ODソニック, 強サマー: 2780
 - {端} MP, 2MP-2MP, 強SA1, ODサマー: 3210
 - MP, 2MP, 強サマー, SA3: 4720
@@ -163,12 +164,16 @@
 
 ## 6HK(pc)
 
+端の密着でしか繋がらない。
+
 - {端} 6HK(pc), 2HK-3HK, 強サマー: 2830
-- {C端} 6HK(pc), HP, cDR HK, 強サマー: 3470
+- {端} 6HK(pc), 2HK-3HK, 強サマー, ODサマー: 3790
+- {端} 6HK(pc), 2HK-3HK, 強サマー, SA1: 4030
+- {端} 6HK(pc), 4HP, 強SA1, ODサマー: 4350
 
 ## {空} ブレイド
 
-相手がブレイドを踏んだ場合のコンボ
+相手が近距離でブレイドを踏んだ場合のコンボ
 
 - {空} ブレイド, 強サマー: 1800
 - {空} ブレイド, ODサマー: 2000
@@ -184,6 +189,7 @@
 - DI(pc), MP-4HP, 強サマー: 2700
 - {C} DI(pc), 3HK, 強サマー: 2740
 - {C} DI(pc), HP, cDR HK, 2MP, 強サマー: 3046
+- {端} DI(pc); 2HK-3HK, 強サマー, ODサマー: 3140 (膝崩れを待って2HK)
 - DI(pc), 2MP-2MP, 強SA1, ODサマー: 3100 (AC2)
 - DI(pc); 2HK-3HK, 強サマー, SA1: 3340 (膝崩れを待って2HK)
 - {C中央} DI(pc), HP, cDR 6MK, MP, 2MP, 弱ソニック, HK, SA1: 3655
