--- a/games/Street-Fighter/Six/characters/Guile/ガイルのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルのコンボ.md
@@ -81,30 +81,35 @@
 
 ## {C} 6MP(+2)
 
-- {C} 6MP(+2), 2LP, 強サマー: 2220
-- {C} 6MP(+2), 2LP, ODサマー: 2380
-- {C} 6MP(+2), 2LP, SA1: 2700
-- {C端} 6MP(+2), 2LP, 弱ソニック, HP, cDR HK, 2MP, 強サマー: 3346
-- {C端} 6MP(+2), 2LP, 強SA1, ODサマー: 3610
-- {C} 6MP(+2), 2LP, 強サマー, SA3: 4620
-- {C端} 6MP(+2), 2LP, 弱ソニック, HP, cDR HK, 2MP, 強サマー, SA3: 5346
+- 6MP(+2), 2LP, 強サマー: 2220
+- 6MP(+2), 2LP, ODサマー: 2380
+- 6MP(+2), 2LP, SA1: 2700
+- {端} 6MP(+2), 2LP, 弱ソニック, HP, cDR HK, 2MP, 強サマー: 3346
+- {端} 6MP(+2), 2LP, 強SA1, ODサマー: 3610
+- 6MP(+2), 2LP, 強サマー, SA3: 4620
+- {端} 6MP(+2), 2LP, 弱ソニック, HP, cDR HK, 2MP, 強サマー, SA3: 5346
 
 ## {C} 6MP(+4)
 
-- {C} 6MP(+4), 2MP, 強サマー: 2520
-- {C} 6MP(+4), 2MP, ODサマー: 2680
-- {C端} 6MP(+4), 2MP-2MP, ODソニック, 強サマー: 2980
-- {C} 6MP(+4), 2MP, 強SA1, ODサマー: 3750
-- {C} 6MP(+4), 2MP, 強サマー, SA3: 4920
+- 6MP(+4), 2MP, 強サマー: 2520
+- 6MP(+4), 2MP, ODサマー: 2680
+- {端} 6MP(+4), 2MP-2MP, ODソニック, 強サマー: 2980
+- 6MP(+4), 2MP, CR MP, 3HK, 強サマー: 3112
+- 6MP(+4), 2MP, 強SA1, ODサマー: 3750
+- 6MP(+4), 2MP, 強サマー, SA3: 4920
+- 6MP(+4), 2MP, CR 2MP, MP, 2MP, 強サマー, SA3: 5056
 
 ## 2MK
 
 - 2MK-6MP: 1140
 - 2MK, 2LP, 強サマー: 1720
+- 2MK, 2LP, ODサマー: 1860
 - 2MK, 2LP, 強サマー, SA3: 3720
 
 ## 2MK(+2)
 
+- 2MK(+2), 中サマー: 1540
+- 2MK(+2), ODサマー: 1780
 - 2MK(+2), 2MP, 強サマー: 1960
 - 2MK(+2), 2MP, CR 2MP, MP, 2MP, 強サマー: 2368
 - 2MK(+2), 2MP, 強SA1, ODサマー: 3020
