--- a/games/Street-Fighter/Six/characters/Guile/ガイルの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの練習メニュー.md
@@ -70,6 +70,18 @@
 
 - 弱サマー, DR 6MP/2MK/投げ
 
+## 中攻撃の筋トレ
+
+（ダミー設定 > ガード: 2段目以降ガード）
+（パラメーター設定 > ドライブゲージ回復設定: 常に固定）
+
+- 2MP, CR 2MP, MP, 2MP, CR 2MP, ..., MP, 2MP, 強サマー, SA3
+
+無限ゲージで端まで行ってからSA3で締める。
+端に着く前に必ずサマーSA3で締めること。端から端まで行くとサマーで4342ダメージ。
+途中のMP, 2MPも溜めは作って、CR 2MPで離す。
+最終的には目を閉じてもできるようにする。
+
 ## キャンセルラッシュからの攻め
 
 - 2MP, CR 2MP, MP, 2MP, 強サマー, SA3, 強ブレイド
