--- a/games/Street-Fighter/Six/characters/Jamie/ジェイミーのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Jamie/ジェイミーのコンボ.md
@@ -128,6 +128,10 @@ MK, cDR MP, 2HP, 強酔疾歩-P, SA3, OD酔疾歩, 2HK-酒: 4713
 - DR HP, LP-LK-MP, 強張弓腿: 2420/2252
 - (端) DR HP, LP-LK-MP, cDR MP, 2HP, OD疾歩, SA1: 3281
 
+## {C} J.HK
+
+- {C} J.HK, 強昇竜: 2124-2420
+
 ## (酔3) 点辰
 
 - (酔3) 点辰, MP, LP-LK-MP, 弱張弓腿: 1443
