--- a/games/Street-Fighter/Six/characters/Guile/ガイルのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルのコンボ.md
@@ -134,17 +134,19 @@
 
 ## {C} HP(pc)
 
-- {C} HP(pc), 3HK, 強サマー: 2860
-- {C} HP(pc), 3HK, ODサマー: 3000
-- {C} HP(pc), HP, cDR HK, 2MP, 強サマー: 3166
-- {C} HP(pc), HK/4HP, 強SA1, ODサマー: 3760
-- {C中央} HP(pc), HP, cDR 6MK, MP, 2MP, 弱ソニ, HK, 弱SA1: 3775
-- {C端} HP(pc), HP, cDR 6MK, MP, 2MP, 弱ソニ, 4HP, 弱ソニ, HK, 強SA1, ODサマー: 3968
-- {C} HP(pc), HK/4HP, SA3: 4520
-- {C} HP(pc), 2MP, 強サマー, SA3: 4540
-- {C} HP(pc), HP, cDR HK, 2MP, 強サマー, SA3: 5166
-- {C中央} HP(pc), HP, cDR 6MK, MP, 2MP, 弱ソニ, HK, SA3: 5175
-- {C端} HP(pc), HP, cDR 6MK, MP, 2MP, 弱ソニ, 4HP, 弱ソニック, HK, SA3: 5324
+- HP(pc), 3HK, 強サマー: 2860
+- HP(pc), 3HK, ODサマー: 3000
+- HP(pc), HP, cDR HK, 2MP, 強サマー: 3166
+- HP(pc), HP, cDR HK, MP-4HP, 強サマー: 3306
+- {端} HP(pc), HP, CR HK, MP-4HP, ODソニック, 強サマー: 3520
+- HP(pc), HK/4HP, 強SA1, ODサマー: 3760
+- {中央} HP(pc), HP, cDR 6MK, MP, 2MP, 弱ソニ, HK, 弱SA1: 3775
+- {端} HP(pc), HP, cDR 6MK, MP, 2MP, 弱ソニ, 4HP, 弱ソニ, HK, 強SA1, ODサマー: 3968
+- HP(pc), HK/4HP, SA3: 4520
+- HP(pc), 2MP, 強サマー, SA3: 4540
+- HP(pc), HP, cDR HK, 2MP, 強サマー, SA3: 5166
+- {中央} HP(pc), HP, cDR 6MK, MP, 2MP, 弱ソニ, HK, SA3: 5175
+- {端} HP(pc), HP, cDR 6MK, MP, 2MP, 弱ソニ, 4HP, 弱ソニック, HK, SA3: 5324
 
 ## 4HP
 
