--- a/games/Street-Fighter/Six/characters/Guile/ガイルのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルのコンボ.md
@@ -3,26 +3,26 @@
 - 2LP, 2LP, 強サマー: 1520
 - 2LP, 2LP, 強サマー, SA3: 3520
 
-## 2LP, 2LP, cDR 2LP
+## 2LP, 2LP, CR 2LP
 
-- 2LP, cDR 2LP, MP-4HP, 強サマー: 1752
-- 2LP, cDR 2LP, MP-4HP, 強SA1, ODサマー: 2362
-- 2LP, cDR 2LP, MP, 2MP, 強サマー, SA3: 3368
+- 2LP, CR 2LP, MP-4HP, 強サマー: 1752
+- 2LP, CR 2LP, MP-4HP, 強SA1, ODサマー: 2362
+- 2LP, CR 2LP, MP, 2MP, 強サマー, SA3: 3368
 
 ## 2LP(+2)
 
 - 2LP(+2), 2MP-2MP, 強サマー: 1780
 - 2LP(+2), MP-4HP, 強サマー: 2100
-- {C} 2LP(+2), HP, cDR HK, 2MP, 強サマー: 2446
+- {C} 2LP(+2), HP, CR HK, 2MP, 強サマー: 2446
 - 2LP(+2), MP-4HP, 強SA1, ODサマー: 2930
 - 2LP(+2), 2MP, 強サマー, SA3: 3760
-- {C} 2LP(+2), HP, cDR HK, 2MP, 強サマー, SA3: 4446
+- {C} 2LP(+2), HP, CR HK, 2MP, 強サマー, SA3: 4446
 
 ## 2LK
 
 - 2LK, 2LP, 強サマー: 1420
 - 2LK, 2LP, LK, 強サマー: 1490(AC1)
-- 2LK, 2LP, LK, cDR LP, MP-4HP, ODソニック, SA3: 3384(AC3)
+- 2LK, 2LP, LK, CR LP, MP-4HP, ODソニック, SA3: 3384(AC3)
 
 ## 4LK(+4)
 
@@ -42,16 +42,16 @@
 ## MP(+2)
 
 - MP(+2), MP-4HP, 強サマー: 2780
-- MP(+2), HP, cDR HK, 2MP, 強サマー: 3112
+- MP(+2), HP, CR HK, 2MP, 強サマー: 3112
 - MP(+2), MP-4HP, 強SA1, ODサマー: 3720
-- MP(+2), HP, cDR HK, MP-4HP, 強SA1, ODサマー: 3902
-- MP(+2), HP, cDR HK, 2MP, 強サマー, SA3: 5112
+- MP(+2), HP, CR HK, MP-4HP, 強SA1, ODサマー: 3902
+- MP(+2), HP, CR HK, 2MP, 強サマー, SA3: 5112
 
 ## MP(+4)
 
-- MP(pc), 4HP, cDR MP, MP-4HP, 強サマー: 3176
+- MP(pc), 4HP, CR MP, MP-4HP, 強サマー: 3176
 - MP(+4), 4HP, 強SA1, ODサマー: 3750
-- MP(pc), 4HP, cDR MP, MP-4HP, ODソニック, SA3: 4798
+- MP(pc), 4HP, CR MP, MP-4HP, ODソニック, SA3: 4798
 
 ## 2MP
 
@@ -69,9 +69,9 @@
 
 - 2MP(+4), MP-4HP, 強サマー: 2590
 - {端} 2MP(+4), MP-4HP, ODソニック, 強サマー: 3220
-- {C} 2MP(+4), HP, cDR HK, 2MP, 強サマー: 3112
+- {C} 2MP(+4), HP, CR HK, 2MP, 強サマー: 3112
 - 2MP(+4), MP-4HP, 強SA1, ODサマー: 3720
-- {C} 2MP(+4), HP, cDR HK, 2MP, 強サマー, SA3: 5112
+- {C} 2MP(+4), HP, CR HK, 2MP, 強サマー, SA3: 5112
 
 ## 2MP, CR 2MP
 
@@ -84,10 +84,10 @@
 - 6MP(+2), 2LP, 強サマー: 2220
 - 6MP(+2), 2LP, ODサマー: 2380
 - 6MP(+2), 2LP, SA1: 2700
-- {端} 6MP(+2), 2LP, 弱ソニック, HP, cDR HK, 2MP, 強サマー: 3346
+- {端} 6MP(+2), 2LP, 弱ソニック, HP, CR HK, 2MP, 強サマー: 3346
 - {端} 6MP(+2), 2LP, 強SA1, ODサマー: 3610
 - 6MP(+2), 2LP, 強サマー, SA3: 4620
-- {端} 6MP(+2), 2LP, 弱ソニック, HP, cDR HK, 2MP, 強サマー, SA3: 5346
+- {端} 6MP(+2), 2LP, 弱ソニック, HP, CR HK, 2MP, 強サマー, SA3: 5346
 
 ## {C} 6MP(+4)
 
@@ -120,10 +120,10 @@
 ## 2MK(+4)
 
 - 2MK(+4), MP, 2MP, 強サマー: 2240
-- {C} 2MK(+4), HP, cDR HK, 2MP, 強サマー: 2586
+- {C} 2MK(+4), HP, CR HK, 2MP, 強サマー: 2586
 - 2MK(+4), MP-4HP, 強SA1, ODサマー: 3130
 - 2MK(+4), MP, 2MP, 強サマー, SA3: 4240
-- {C} 2MK(+4), HP, cDR HK, 2MP, 強サマー, SA3: 4586
+- {C} 2MK(+4), HP, CR HK, 2MP, 強サマー, SA3: 4586
 
 ## 6MK(+1)
 
@@ -136,23 +136,23 @@
 
 - HP(pc), 3HK, 強サマー: 2860
 - HP(pc), 3HK, ODサマー: 3000
-- HP(pc), HP, cDR HK, 2MP, 強サマー: 3166
-- HP(pc), HP, cDR HK, MP-4HP, 強サマー: 3306
+- HP(pc), HP, CR HK, 2MP, 強サマー: 3166
+- HP(pc), HP, CR HK, MP-4HP, 強サマー: 3306
 - {端} HP(pc), HP, CR HK, MP-4HP, ODソニック, 強サマー: 3520
 - HP(pc), HK/4HP, 強SA1, ODサマー: 3760
-- {中央} HP(pc), HP, cDR 6MK, MP, 2MP, 弱ソニ, HK, 弱SA1: 3775
-- {端} HP(pc), HP, cDR 6MK, MP, 2MP, 弱ソニ, 4HP, 弱ソニ, HK, 強SA1, ODサマー: 3968
+- {中央} HP(pc), HP, CR 6MK, MP, 2MP, 弱ソニ, HK, 弱SA1: 3775
+- {端} HP(pc), HP, CR 6MK, MP, 2MP, 弱ソニ, 4HP, 弱ソニ, HK, 強SA1, ODサマー: 3968
 - HP(pc), HK/4HP, SA3: 4520
 - HP(pc), 2MP, 強サマー, SA3: 4540
-- HP(pc), HP, cDR HK, 2MP, 強サマー, SA3: 5166
-- {中央} HP(pc), HP, cDR 6MK, MP, 2MP, 弱ソニ, HK, SA3: 5175
-- {端} HP(pc), HP, cDR 6MK, MP, 2MP, 弱ソニ, 4HP, 弱ソニック, HK, SA3: 5324
+- HP(pc), HP, CR HK, 2MP, 強サマー, SA3: 5166
+- {中央} HP(pc), HP, CR 6MK, MP, 2MP, 弱ソニ, HK, SA3: 5175
+- {端} HP(pc), HP, CR 6MK, MP, 2MP, 弱ソニ, 4HP, 弱ソニック, HK, SA3: 5324
 
 ## 4HP
 
-- (中央) 4HP, cDR 6MK, MP, 2MP, 弱ソニ, HK, 弱SA1: 3479
-- (中央) 4HP, cDR HK, HP, cDR 6MK, MP, 2MP, 弱ソニ, HK, 弱SA1: 4067
-- (中央) 4HP, cDR 6MK, MP, 2MP, 弱ソニ, HK, SA3: 4799
+- (中央) 4HP, CR 6MK, MP, 2MP, 弱ソニ, HK, 弱SA1: 3479
+- (中央) 4HP, CR HK, HP, CR 6MK, MP, 2MP, 弱ソニ, HK, 弱SA1: 4067
+- (中央) 4HP, CR 6MK, MP, 2MP, 弱ソニ, HK, SA3: 4799
 
 ## {立} 6HP
 
@@ -195,25 +195,25 @@
 
 - DI(pc), MP-4HP, 強サマー: 2700
 - {C} DI(pc), 3HK, 強サマー: 2740
-- {C} DI(pc), HP, cDR HK, 2MP, 強サマー: 3046
+- {C} DI(pc), HP, CR HK, 2MP, 強サマー: 3046
 - {端} DI(pc); 2HK-3HK, 強サマー, ODサマー: 3140 (膝崩れを待って2HK)
 - DI(pc), 2MP-2MP, 強SA1, ODサマー: 3100 (AC2)
 - DI(pc); 2HK-3HK, 強サマー, SA1: 3340 (膝崩れを待って2HK)
-- {C中央} DI(pc), HP, cDR 6MK, MP, 2MP, 弱ソニック, HK, SA1: 3655
-- {C端} DI(pc), HP, cDR 6MK, MP, 2MP, 弱ソニック, HK, SA1: 3821
-- {C端} DI(pc), HP, cDR 6MK, MP, 2MP, 弱ソニック, HK, 強SA1, ODサマー: 3865
+- {C中央} DI(pc), HP, CR 6MK, MP, 2MP, 弱ソニック, HK, SA1: 3655
+- {C端} DI(pc), HP, CR 6MK, MP, 2MP, 弱ソニック, HK, SA1: 3821
+- {C端} DI(pc), HP, CR 6MK, MP, 2MP, 弱ソニック, HK, 強SA1, ODサマー: 3865
 - DI(pc), 4HP, 強SA1, ODサマー: 3640
 - DI(pc), 強サマー, SA3: 4480
 - {C} DI(pc), 3HK, 強サマー, SA3: 4740
 - DI(pc), MP-4HP, ODソニック, SA3: 4460 (AC3)
-- {C} DI(pc), HP, cDR HK, 2MP, 強サマー, SA3: 5046
-- {中央} DI(pc), 4HP, cDR 6MK, MP, 2MP, 弱ソニック, HK, SA3: 4975
-- {C中央} DI(pc), HP, cDR 6MK, MP, 2MP, 弱ソニック, HK, SA3: 5055
-- {端} DI(pc), 4HP, cDR 6MK, MP, 2MP, 弱ソニック, 4HP, 弱ソニック, HK, SA3: 5124
-- {C端} DI(pc), HP, cDR 6MK, MP, 2MP, 弱ソニック, 4HP, 弱ソニック, HK, SA3: 5221
+- {C} DI(pc), HP, CR HK, 2MP, 強サマー, SA3: 5046
+- {中央} DI(pc), 4HP, CR 6MK, MP, 2MP, 弱ソニック, HK, SA3: 4975
+- {C中央} DI(pc), HP, CR 6MK, MP, 2MP, 弱ソニック, HK, SA3: 5055
+- {端} DI(pc), 4HP, CR 6MK, MP, 2MP, 弱ソニック, 4HP, 弱ソニック, HK, SA3: 5124
+- {C端} DI(pc), HP, CR 6MK, MP, 2MP, 弱ソニック, 4HP, 弱ソニック, HK, SA3: 5221
 
-- {C中央} DI(pc), HP, cDR 6MK, MP, 2MP, 弱ソニック, HK, SA1: 3655
-- {C中央} DI(pc), HP, cDR 6MK, MP, 2MP, 弱ソニック, HK, SA3
+- {C中央} DI(pc), HP, CR 6MK, MP, 2MP, 弱ソニック, HK, SA1: 3655
+- {C中央} DI(pc), HP, CR 6MK, MP, 2MP, 弱ソニック, HK, SA3
 
 ## DI(壁)
 
@@ -246,5 +246,5 @@ MP-4HPや2MP-2MPからSA3はカス当たりになる。
 MP, 2MPが入るところはMP-4HPも入る。MPしか届かない場合はMP-4HPにするべき。
 ただし、MP-4HP, SA3はカス当たりになる。
 
-- {端} 6MP(+2), 2LP, 弱ソニック, 2MP, 弱ソニック, 4HP, cDR HK, ...
+- {端} 6MP(+2), 2LP, 弱ソニック, 2MP, 弱ソニック, 4HP, CR HK, ...
 - {端} 6MP(+2), 2LP, 弱ソニック, 2MP, 弱ソニック, 4HP, 弱ソニック, HK, ...
