--- a/games/Street-Fighter/Six/characters/Guile/ガイルのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルのコンボ.md
@@ -34,9 +34,11 @@
 
 - MP, 2MP, 強サマー: 2320
 - MP, 2MP-2MP, 強サマー: 2320
+- {端} MP, 2MP-2MP, 弱ソニック, 強サマー: 2540
 - MP, 2MP, ODサマー: 2480
 - {端} MP, 2MP-2MP, ODソニック, 強サマー: 2780
 - {端} MP, 2MP-2MP, 強SA1, ODサマー: 3210
+- MP, 2MP, 強SA1, ODサマー: 3550
 - MP, 2MP, 強サマー, SA3: 4720
 
 ## MP(+2)
