--- a/games/Street-Fighter/Six/characters/Guile/ガイルの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの攻めの選択肢.md
@@ -10,10 +10,22 @@
 
 ## LK, cDR 2LP
 
+無敵技以外で割り込めない。
+ヒットすると2MPやHPが入る。
 ガードされても+2になる。
 
-## 2MP, CR 2MP
+## 2MP, CR 2MP: 3-7
 
 - 2MP, CR 2MP, MP, 2MP, 強サマー
 - 2MP, CR 2MP(g), 前投げ
 - 2MP, CR 2MP(g), 後歩き: シミー
+
+## DR 6MP: 28-32
+
+中段。ヒットすると2MPが入る。
+ガードされても+1で、2LP, 弱/ODソニックでもいいし、あえて2MP, CR 2MPとか振ってもいいし、後退で投げをスカしてもいい。
+
+## DR 2MK: 15-20
+
+下段。ヒットすると2MPやHPが入る。
+ガードされても-1で、相手の最速通常投げに後退が間に合う。
