--- a/games/Street-Fighter/Six/characters/Guile/ガイルの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの練習メニュー.md
@@ -18,6 +18,12 @@
 - 2HP: 溜めがない場合
 - MK: 遠距離
 
+## ラッシュからの攻め
+
+- DR 6MP/2MK, 2MP, 中サマー, DR 6MP/2MK, ...
+- DR 6MP(g), 2LP, 弱ソニック, ガード
+- DR 2MK(g), 後退, ガード
+
 ## ジャンプ弱攻撃からの攻め
 
 （ダミー設定 > ガード: ランダム）
