--- a/games/Street-Fighter/Six/characters/Guile/ガイルのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルのコンボ.md
@@ -221,6 +221,9 @@
 
 - DI(壁), 2MP, 強サマー: 2260
 - {C} DI(壁), 3HK, 強サマー: 2580
+- {C} DI(壁), HP, 弱ブレイド, 強サマー: 2640
+- {C} DI(壁), HP, 弱ブレイド, ODサマー: 2760
+- DI(壁), 2HK-3HK, 強サマー, SA1: 3180
 - DI(壁), 4HP, 強SA1, ODサマー: 3480
 - DI(壁), 強サマー, SA3: 4320
 
@@ -231,6 +234,7 @@
 ガードだと3HKが当たらない。
 
 - DI(g)(壁), 2MP, 強サマー: 1600
+- DI(g)(壁), HP, 弱ブレイド, 強サマー: 1760
 - DI(g)(壁), MP-4HP, 強サマー: 1856
 - DI(g)(壁), 4HP, 強SA1, ODサマー: 2912
 - DI(g)(壁), 4HP, SA3: 3840
