--- a/games/Street-Fighter/Six/characters/Mai/舞のコンボ.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞のコンボ.md
@@ -41,6 +41,20 @@ SA1で炎を纏えるなら積極的にまとった方がいい。
 - 2LK, LP, 弱忍蜂: 1000 (AC1)
 - 2LK, LP, 弱忍蜂, SA3: 3000 (AC1)
 
+## 2LK(+4)
+
+- 2LK(+4), 2MP, 2LP, 弱忍蜂: 1370
+- {C} 2LK(+4), 2MP, 強忍蜂: 1380
+- {立} 2LK(+4), 2MP, 強炎舞, 弱忍蜂: 1640
+- {立} 2LK(+4), 2MP, 強炎舞, 強飛翔: 1840
+- 2LK(+4), 2MP, OD炎舞, 弱忍蜂: 1860
+- 2LK(+4), 2MP, OD炎舞, 強飛翔: 2100
+- 2LK(+4), 2MP, OD炎舞, OD飛翔: 2340
+- {端} 2LK(+4), 2MP, OD炎舞, SA2, 中飛翔: 3500
+- {端} 2LK(+4), 2MP, OD炎舞, SA2, OD飛翔: 3700
+- 2LK(+4), 2MP, 2LP, 弱忍蜂, SA3: 3370
+- {立} 2LK(+4), 2MP, 強炎舞, 弱忍蜂, SA3: 3640
+
 ## 2MP
 
 - 2MP, 2LP, 弱忍蜂: 1540
