--- a/games/Street-Fighter/Six/characters/Mai/舞の立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞の立ち回り.md
@@ -47,6 +47,16 @@ HKの外くらいから投げるとラッシュも狙える。
 溜め花蝶扇は初段をガードしたあと舞側に余裕があるので、相手の動きを見やすい。様子見で近づいておいて、強い攻めを狙いやすい。ただの遅い弾よりも強いところ。
 ただ、扇自体のダメージは小さいので、無理やり昇竜暴れしてくる場合がある。
 
+OD扇からステップしてHP, (扇), HPが入るくらいの距離のOD扇が一番強い。
+立ち確認して強炎舞も簡単だし、しゃがんでたら忍蜂や中炎舞で締めてもいい。あるいはOD炎舞でもいい。
+あとJ.HKも綺麗に重なる距離でもある。OD暴れで食らい逃げしようとする相手には、昇竜やSA2/3で拾える。
+OD暴れはガードすると何故か扇に当たらないことがあるので、普通にHPの距離でガードして確反にすればいい。
+
+- OD扇, ステップ, HP, (扇), HP, ...
+- OD扇, ステップ, 2MK, (扇), HP, ...
+- OD扇, ステップ, 6MP, (扇), 2MP, ...
+- OD扇, 前J.HK, (扇), HP/4HK, ...
+
 ## 対空
 
 SA1が対空技としても優秀。端のめくりにも当たる。
