--- a/games/Street-Fighter/Six/characters/Guile/ガイルの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの攻めの状況.md
@@ -2,14 +2,20 @@
 
 ## 2HK(pc): 49
 
+## 6HK(c): 29
+
+- {端} DR 6MP/2MK: 中下段
+
 ## 6HK(pc): 55
 
-膝崩れになって
+膝崩れになって端では追撃できる。
+中央ではブレイドを置くくらい。
 
 ## 前投げ: 15
 
-- (端) 6HP
-- (端) DR 前投げ
+- {端} 6HP: 最速コパン以外に引っかかる
+- {端} DR 前投げ: 柔道
+- {端} DR 6HK: 投げ抜け一点読み
 
 ## 後投げ: 18
 
