--- a/games/Street-Fighter/Six/characters/Guile/ガイルの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの練習メニュー.md
@@ -28,7 +28,9 @@
 
 （ダミー設定 > ガード: ランダム）
 
-- J.LK, MP, 2MP, 強サマー, SA3, 強ブレイド
+- J.LK, MP, 2MP, 中サマー, ...
+  - DR 前投げ, 弱ブレイド
+- J.LK, MP, 2MP, 中サマー, DR 前投げ
 - J.LK, MP(g), ガード
 
 ## {C} 確反
@@ -96,3 +98,8 @@
 
 慣れるまではMP, 2MPでなくMP, 2MP-2MPにしてもいい。火力は落ちる。
 なんならMPを挟まなくてもいい。
+
+## 柔道
+
+- {端} 前投げ, DR 前投げ
+- {端} 前投げ, DR 6HK, 2MP
