--- a/games/Street-Fighter/Six/characters/Guile/ガイルの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの練習メニュー.md
@@ -10,27 +10,44 @@
 
 ヒットしたら前に出る。
 
+## 中攻撃の練習
+
+- MP, 2MP, 強サマー, SA3
+
+## ラッシュからの攻め
+
+（ダミー設定 > ガード: ランダム）
+
+- DR 6MP/2MK, 2MP, 中サマー
+  - DR 前投げ
+  - DR 6MP/2MK, ...
+- DR 6MP(g), 2LP, 弱ソニック, ガード
+- DR 2MK(g), 後退, ガード
+
 ## 対空
 
 （対空練習）
 
-- 弱サマー: 溜めがある場合
-- 2HP: 溜めがない場合
-- MK: 遠距離
+- 弱サマー, DR 6MK/2MK/前投げ
 
-## ラッシュからの攻め
+## 中央の前投げからの攻め
 
-- DR 6MP/2MK, 2MP, 中サマー, DR 6MP/2MK, ...
-- DR 6MP(g), 2LP, 弱ソニック, ガード
-- DR 2MK(g), 後退, ガード
+- 前投げ, 弱ソニック, {前方ジャンプ}, 弱サマー
 
-## ジャンプ弱攻撃からの攻め
+## 中攻撃のコンボと攻め
 
 （ダミー設定 > ガード: ランダム）
+（ダミー設定 > 起き上がり: 後方受け身）
+（反撃設定 > ダウンリバーサル: 4F技）
+（反撃設定 > ダウンリバーサル: 垂直ジャンプ）
 
-- J.LK, MP, 2MP, 中サマー, ...
-  - DR 前投げ, 弱ブレイド
-- J.LK, MP, 2MP, 中サマー, DR 前投げ
+- J.LK, MP, 2MP, 中サマー
+  - DR 前投げ, 弱ソニック
+  - DR 前投げ, {垂直ジャンプ}, 2HP
+  - DR 6MP, 2MP, 中サマー, ...
+  - DR 6MP(g), 2LP, 弱ソニック
+  - DR 2MK, 2MP, 中サマー, ...
+  - DR 2MK(g), ガード
 - J.LK, MP(g), ガード
 
 ## {C} 確反
@@ -103,3 +120,18 @@
 
 - {端} 前投げ, DR 前投げ
 - {端} 前投げ, DR 6HK, 2MP
+
+## 中央の前投げからの駆け引き
+
+前跳びにソニックを合わせてラインを上げる練習。
+
+（ダミー設定 > 起き上がり: ランダム）
+（反撃設定 > ダウンリバーサル: 前方ジャンプ）
+（反撃設定 > ダウンリバーサル: 何もしない）
+
+- 前投げ, 後歩き
+  - {その場受け身, 前方ジャンプ}, 2HP
+  - {後方受け身, 前方ジャンプ}, ソニック, ステップ 2回
+    - {その場受け身}, MP, ...
+    - {後方受け身, 前方ジャンプ}, 弱サマー
+  - ガード
