--- a/games/Street-Fighter/Six/characters/Guile/ガイルの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの立ち回り.md
@@ -18,6 +18,10 @@ DR 2MKやDR HKから2MPに繋ぐ。
 
 パリィしてくる相手には、裏拳をとりあえずガードさせて攻め継続するのもあり。
 
+ガイルは対空が弱いせいで投げを狙いにくいので、別に起き攻めしなくていいのかもしれない。ソニックを重ねるとか、ブレイドを置くとか、その程度でも十分。そもそも弾が強いというのは、遠くから攻めている状態に近い。
+
+起き攻めしない場合、差し合いでちまちま削るのと、攻撃が当たった際に一気に火力を出すのが重要になる。
+
 ## 攻めの入り
 
 ジャンプ攻撃をガードさせた後はMPで溜めつつヒット確認。
