--- a/games/Street-Fighter/Six/characters/Mai/舞のコンボ.md
+++ b/games/Street-Fighter/Six/characters/Mai/舞のコンボ.md
@@ -108,9 +108,10 @@ SAを使う場合、HP(+4)のコンボよりもHP, OD炎舞から直接入ると
 ## HP(+4)
 
 - {立} HP(+4), OD扇-h, HP, 強炎舞, 弱忍蜂: 3000
-- {立} HP(+4), OD扇-h, HP, 強炎舞, 強飛翔: 3360
+- {立} HP(+4), OD扇-h, HP, 強炎舞, 強飛翔: 3200
 - HP(+4), OD扇-h, HP, OD炎舞, 強飛翔: 3460
 - HP(+4), OD扇-h, HP, CR 4HK, 2MP, 強炎舞, 強飛翔: 3614
+- HP(+4), OD扇-h, HP, OD炎舞, OD飛翔: 3700
 - {焔1立} HP(+4), OD扇-h(焔), J.HK, HP, 強炎舞, 強飛翔: 3660
 - {焔2立} HP(+4), OD扇-h(焔), J.HK, HP, OD炎舞(焔), 強炎舞, 強飛翔: 4120
 - {立端} HP(+4), OD扇-h, HP, 強炎舞, SA1: 3600
@@ -120,7 +121,10 @@ SAを使う場合、HP(+4)のコンボよりもHP, OD炎舞から直接入ると
   <!-- - {端} HP(+4), OD扇-h, HP, OD炎舞, SA2, 中飛翔: 4860 -->
   <!-- - {立} HP(+4), OD扇-h, HP, 強炎舞, 弱忍蜂, SA3: 5000 -->
 - {端} HP(+4), OD扇-h, HP, OD炎舞, SA2, OD飛翔: 5060
+- {立} HP(+4), OD扇-h, HP, 強炎舞, 弱忍蜂, SA3: 5000
+- HP(+4), OD扇-h, HP, OD炎舞, 弱忍蜂, SA3: 5220
 - {立} HP(+4), OD扇-h, HP, 強炎舞, OD忍蜂, J.MP, 弱炎舞, SA3: 5380
+- HP(+4), OD扇-h, HP, CR 4HK, 2MP, 強炎舞, 弱忍蜂, SA3: 5354
 
 ## 2HP(+2)
 
@@ -153,6 +157,7 @@ DR HPが無難だけど、近かったら直接HPでも届く。
 ## 4HK(+4)
 
 - 4HK(+4), 2MP, 強炎舞, 強飛翔: 2920
+- {C} 4HK(+4), 2MP, OD炎舞, 中忍蜂: 2830
 - 4HK(+4), 2MP, OD炎舞, 強飛翔: 3040
 - 4HK(+4), 2MP, OD炎舞, OD飛翔: 3320
 - {焔1} 4HK(+4), 2MP, OD炎舞(焔), 強炎舞, 強飛翔: 3440
