--- a/games/Street-Fighter/Six/characters/Guile/ガイルの確反.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの確反.md
@@ -7,6 +7,8 @@
 CガイルならHP始動が基本。4HPよりもダメージが高くて、発生7Fで、長め。
 HP(pc), 3HK, 強サマソならHPの最大射程でも入るし、2860減る。SAにはいけないので、SAの場合はHP(pc), 2MP, 強サマーとか。
 
+SA1を使う予定でHKが入るなら、HK, 強SA1, ODサマーの方がHP始動でコンボするよりも少しだけ高い。ただ、ほとんど変わらないのでHPで共通化した方が楽ではある。
+
 ## 6F
 
 Dリバには2MP(+4), HP, cDR HKのルートか、2MP, 2MPのルート。
