--- a/games/Street-Fighter/Six/characters/Guile/ガイルの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの攻めの状況.md
@@ -44,9 +44,19 @@
 
 ## 2MP-2MP, 弱/中サマー: 39
 
+強サマーとほぼ同じ。
+距離も地上で当てた時より離れる。
+
 ## 2MP-2MP, 強サマー: 42 (端では41)
 
 ## 強サマー: 39
+
+- {端} 3HK: +4
+  - 前投げ
+  - 後歩き: シミー
+  - MP
+
+持続でサマーを出すと40Fになることもあるけど、基本的に同じでいい。
 
 ## ODサマー: 29
 
