--- a/games/Street-Fighter/Six/characters/Guile/ガイルの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの攻めの状況.md
@@ -44,8 +44,8 @@
 
 ## 2MP-2MP, 弱/中サマー: 39
 
-強サマーとほぼ同じ。
-距離も地上で当てた時より離れる。
+強サマーとほぼ同じ。距離も地上で当てた時より離れる。
+基本的に火力が落ちるので、2MP, 強サマーでいい。
 
 ## 2MP-2MP, 強サマー: 42 (端では41)
 
