--- a/games/Street-Fighter/Six/characters/Guile/ガイルの特徴.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの特徴.md
@@ -66,18 +66,19 @@
 ## モダン操作
 
 モダン適性は低い。
-そもそもブレイド以外は溜め技ばかりなので恩恵がない。
+そもそもブレイド以外は溜め技ばかりなので恩恵がない。SAが出しやすいくらいか。
 
 - どっちにしても溜めが必要なのでSPボタンの恩恵を受けられない
 - 火力が低い
 
-特にHPと3HKがないせいで火力が落ちている。
+特にHPと3HKがないせいで火力や圧力が落ちている。
 
 SAが全部溜め技かバフ技なので、モダンの強みである見てからSAを活かしづらい。
 対空も溜め技なので必殺技ボタンの恩恵を受けられない。
 
 AC1とAC2は結構使いやすい。特にAC1は小足からのダメージを単純に伸ばしやすい。
-AC3はDI(壁)から入らないし微妙。TCからサマーなら別にクラシックでもできるし。
+とはいえAC2もできれば2MP-2MPを挟みたくないので結局クラシックになる。
+AC3はDI(壁)から入らないし微妙。TCからサマーならほとんどの場面でダメージ下がるし。
 
 ## クラシック限定の技
 
