--- a/games/Street-Fighter/Six/theory/起き攻め.md
+++ b/games/Street-Fighter/Six/theory/起き攻め.md
@@ -60,3 +60,7 @@
 相手のジャンプや投げ抜けを狙って、重なってないけどリターンを取る打撃を選ぶ場合もある。
 
 投げなんて感覚で重ねればいいので、無理に+2や+4にしなくていい。
+
+投げが綺麗に重なってバクステにも負けなくてシミーができる+4か+5が一番使いやすい。
+ガイルの{端}強サマー, 3HKとか。
+舞の{端}前投げ, ステップもシミーができて強いけど+3なのでバクステから4F技が確定する。
