--- a/games/Street-Fighter/Six/characters/Guile/ガイルの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの攻めの状況.md
@@ -13,9 +13,15 @@
 
 ## 前投げ: 15
 
+- {中央} 中ソニック: その場受け身に重なる
+- {中央} 強ソニック: 後方受け身に重なる
+- {中央} DR 前投げ: -15だが、短い無敵技が届かない
+- DR 4LK: 4F技と相打ち、中央でも後ろ受け身に届いて五分
 - {端} 6HP: 最速コパン以外に引っかかる
 - {端} DR 前投げ: 柔道
 - {端} DR 6HK: 投げ抜け一点読み
+
+中央のソニックは重ねるとジャンプできなくて、ジャンプしてもサマーがギリギリ間に合う。ジュリの疾空閃とか一部の行動には間に合わないものがある。
 
 ## 後投げ: 18
 
