--- a/games/Street-Fighter/Six/characters/Guile/ガイルの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの立ち回り.md
@@ -37,6 +37,8 @@ DR 2MKやDR HKから2MPに繋ぐ。
 
 溜めがあって2LPで暴れるならソニックまで入れてしまってもいい。
 
+暴れるなら2LP, 2LPは届かないことも多いので、2LP(c), 2MP-2MPの方がいい。カウンターにならなかったら2MPで止めて、できればソニックで誤魔化す。
+
 ## 対空
 
 - 弱サマー: 近・中距離、溜めあり
