--- a/games/Street-Fighter/Six/theory/キャラの強さ.md
+++ b/games/Street-Fighter/Six/theory/キャラの強さ.md
@@ -46,3 +46,5 @@
 ダルシムは攻めキャラ。一方的に相手の間合いの外から攻撃を当てられて、差し合いが常に攻めているような状態。
 
 キャミィやジェイミーは攻めと守りの両面で強みのあるキャラだったけど、キャミィの入れ替えOD昇竜はさすがにナーフされた。
+
+目押しのクッソむずいコンボで火力が伸びるのは別にいいけど、ゲージ回収は他にも使えるので強すぎてまずい。ナーフされがち。
