--- a/shared/voice/声の支え.md
+++ b/shared/voice/声の支え.md
@@ -70,3 +70,5 @@ https://youtu.be/t9ikmatTX3w?si=o6IwfwS3eamhxzm-
 まずは一拍だけでもオペラ歌手のような声が出せるようにする。
 
 実際に声を出す時はある程度声を支えられていないとすぐ息が切れてしまう。
+
+横隔膜を下げたまま使える以上の息は使ってはいけない。息を吐き切った上で横隔膜の力を抜くとブハッと息が出るくらいでないといけない。息を吐き切ってから横隔膜の力を抜けばどれくらい息が残っているかわかる。多ければいいわけではないけど、ある程度ブハッと吐けないといけない。
