--- a/shared/entertainment/examples/racing/horse/競馬場.md
+++ b/shared/entertainment/examples/racing/horse/競馬場.md
@@ -1,3 +1,18 @@
 ## 東京競馬場
 
+券売機はスマッピーが便利。UMACAも持ってると並ばずに買える。
 パドック側の2階券売機はスマッピー専用でわりと穴場。そもそも回転も速い。
+
+3階の中央インフォ前で混雑状況を見れる。
+
+上の階ほど人が少ない。トイレも空いてる。階段しかないけど。
+
+馬場内はわりと人がまばらで少し遠いけど見通しはいい。
+あと芝のコースが外側なので、芝の時は馬場側だとちょっと遠い。
+キッズエリアとか空いてる。ゴールも液晶も見えないから不便だけど。
+
+## その他
+
+馬が見たいだけなら客席よりもパドックが近い。
+
+トイレは混みがち。空いてるトイレを見つけたら済ませておいた方がいい。
