--- a/shared/entertainment/examples/racing/horse/馬を選ぶ.md
+++ b/shared/entertainment/examples/racing/horse/馬を選ぶ.md
@@ -4,9 +4,16 @@
 - 枠
 - 戦績
 - 年齢
-- 見た目
+- 体つき
 - 歩き方
+  - 足首の動き
 - パドックでの振る舞い
+  - 嫌そうにしている
+  - 体のバランスが悪い
+  - 痩せすぎている
+  - 動きが重い
+  - 足がつっかえている
+  - パドックのコースから外れて落ち着かない
 - 体重
 - 体重の変化
 - 体長
