--- a/shared/entertainment/examples/racing/horse/馬券を買う.md
+++ b/shared/entertainment/examples/racing/horse/馬券を買う.md
@@ -1,3 +1,6 @@
+まずは少額から。
+あとは当たるようになってからでいい。
+
 なんとなくの推しで買うなら100円でいい。勝つことを考えるなら複勝で買う。
 
 まずは1着候補の本命と対抗を決めて、どちらかの単勝を買うのが基本。
@@ -6,3 +9,13 @@
 まずは複勝、単勝、馬連のどれかを一点買いするのが基本。
 色々と買ってしまうと一部が当たってもハズレ馬券が出てしまう。
 当たってるのにマイナスになるのが一番カス。ただただ買い方が下手。ギャンブルで下手に当てるくらいなら外れた方がいい。
+
+馬券は複勝でも、目標としてはまず単勝で当てるのを目指す。
+まずは1番を当てられるようにしたい。
+
+複勝でも2番人気以下なら1番人気の単勝と同じくらいの払い戻しにはなる。
+
+強そうな馬が複数いるなら馬連やワイドでもいいけど、三連は難しい。
+
+馬券はネットで買わないとめっちゃ並ぶ。
+UMACAやスマッピー専用機ならわりと空いてる。
