--- a/shared/music/vocal/歌の技術.md
+++ b/shared/music/vocal/歌の技術.md
@@ -11,4 +11,5 @@
 まずは音程の上下と音量の大小をゆっくりコントロールできるようにして、慣れてきたら早く切り替えられるようにする。
 音量なら徐々に大きくするのと小さくするのを繰り返したり、音程なら徐々に上げるのと下げるのを繰り返したり。
 
-声の高さは歌の上手い下手とは関係ない。単にキーを変えないと歌えない曲があるっていうだけ。下にも広いとキーを変えても歌えない。
+声の高さは歌の上手い下手とは関係ない。
+単に声の違い。ただ、声域が狭いと歌える曲の範囲は狭まる。キーを変えないと歌えない曲があるとか、下にも広いとキーを変えても歌えない。
