--- a/games/Street-Fighter/Six/characters/Manon/差し合い.md
+++ b/games/Street-Fighter/Six/characters/Manon/差し合い.md
@@ -41,6 +41,10 @@ HKを遠くから当ててドライブゲージを削ったり、中足を誘っ
 
 マノンは前に出るのが弱い。中足ラッシュもないし、ラッシュも遅いし、長い技は短い。
 
+## ゲージ管理
+
+あくたがわマノンは画面を押してたら平気でBOして無理せずに下がってる。マノンは引くのが強いので、BOもキャラに合った動きになっている。
+
 ## MP
 
 全ての基本。
