--- a/games/Street-Fighter/Six/theory/攻めの選択肢.md
+++ b/games/Street-Fighter/Six/theory/攻めの選択肢.md
@@ -45,6 +45,10 @@
 
 遅らせ打撃は無敵技に引っかかってもいいので、ジャンプには当たるようにしたい。シミーとは異なる。
 
+遅らせ打撃は投げ抜けとジャンプ入れっぱを狩るのが基本。逆にガードや無敵技には普通に負ける。
+
+遅らせ打撃は投げ抜けともう一つ何かを狩れるようにする。
+
 6F遅れまでなら最速中攻撃暴れには相打ち以上になる。
 基本的にはファジーが多いので7-8F遅れでも大丈夫。
 
