--- a/shared/job/hunting/職場を選ぶ.md
+++ b/shared/job/hunting/職場を選ぶ.md
@@ -9,6 +9,7 @@
   - 家から勤務地までの距離
 - 出社頻度（リモートワークの有無）
 - 休日（年末年始を含めて125日が標準）
+- 口コミ
 - その他の社内ルール
 
 ## 給与
@@ -80,3 +81,5 @@ Full-time と Part-time がある。
 退職代行を使われる会社というのは、上司が人間だと思われてない。人間の基準に達してないから、会話が成立すると思われてない。会社や上司が馬鹿にされてるから退職代行を使われる。
 
 会社の面接で退職代行を使われた件数って出せるのか？
+
+職場を選ぶときは口コミを見るのがまず基本。Googleの口コミや転職サイトの口コミがあると助かる。小さい会社だと口コミがなかったりもするので、その場合は面談などで見極めるしかない。
