--- a/shared/trust/intimacy/誰かと親しくなる.md
+++ b/shared/trust/intimacy/誰かと親しくなる.md
@@ -79,3 +79,7 @@
 - 褒める
 
 相手のことを知らないのに褒めるのは良くない。
+
+相手により好かれたいなら、自分のことを考えさせるような質問もいい。ただ、めんどくさい質問なので、そもそもある程度好かれていないと使えない。
+
+友人付き合いが長続きしないのは、次の人と会ったらそっちに興味が移るのもある。代替可能なものだと思ってる。
