--- a/games/Street-Fighter/Six/characters/Guile/ガイルの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Guile/ガイルの立ち回り.md
@@ -22,6 +22,8 @@ DR 2MKやDR HKから2MPに繋ぐ。
 
 起き攻めしない場合、差し合いでちまちま削るのと、攻撃が当たった際に一気に火力を出すのが重要になる。
 
+ガイルは投げの択に行きにくいのが難しい。ある程度余裕がないと投げから対空が出ない。一応、下を入れていても投げは出るので、溜めたまま投げは出せる。DR 前投げがした入れっぱで出せる+15とかなら行ってもいい。
+
 ## 攻めの入り
 
 ジャンプ攻撃をガードさせた後はMPで溜めつつヒット確認。
